--- a/styles.css
+++ b/styles.css
@@ -170,9 +170,10 @@ model-viewer > #ar-prompt > img {
 
 .controls {
 position: absolute;
+font-family: 'Rubik', sans-serif;
 display: flex;
 flex-direction: column;
-bottom: 40px;
+bottom: 220px;
 left: 1rem;
 border-radius: 0.5rem;
 padding: 0.5rem 1rem;
@@ -190,7 +191,7 @@ padding: 0.5rem;
 border-radius: 0.5rem;
 }
 
-button {
+#color-controls-button {
   font-family: 'Rubik', sans-serif;
   background-color: #fff;
   border-radius: 0.2rem;
@@ -199,4 +200,51 @@ button {
   box-shadow: 1px 1px 2px #22222227;
   cursor: pointer;
   margin: 0.25em !important;
+}
+
+.view-button {
+  background: #fff;
+  border-radius: 4px;
+  border: none;
+  box-sizing: border-box;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+  color: rgba(0, 0, 0, 0.8);
+  display: block;
+  font-family: Futura, Helvetica Neue, sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  max-width: 128px;
+  overflow-wrap: break-word;
+  padding: 0.5em 1em;
+  position: absolute;
+  width: max-content;
+  height: max-content;
+  cursor: pointer;
+  transform: translate3d(-50%, -50%, 0);
+}
+
+#texture-panel {
+  bottom: 5px
+
+}
+
+#texture-name, #image-name {
+  font-size: 0.8em;
+}
+
+p {
+  margin-top: .25em;
+  margin-bottom: .25em;
+  max-width: 680px;
+  line-height: 24px;
+}
+
+select {
+  font-family: inherit;
+  border: 0;
+  border-radius: 0.2rem;
+  padding: 0.24rem;
+  outline: none;
+  cursor: pointer;
+  box-shadow: 1px 1px 2px #22222227;
 }
